--- a/dos results ver 4/router-fetch/malicious/2-fft-malicious-n-0-4-m-7.ipynb
+++ b/dos results ver 4/router-fetch/malicious/2-fft-malicious-n-0-4-m-7.ipynb
@@ -17,7 +17,8 @@
     "import numpy as np\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import math"
    ]
   },
   {
@@ -927,7 +928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
