--- a/dos results ver 4/router-fetch/normal/2-fft-normal-n-0-6.ipynb
+++ b/dos results ver 4/router-fetch/normal/2-fft-normal-n-0-6.ipynb
@@ -17,7 +17,8 @@
     "import numpy as np\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import math"
    ]
   },
   {
@@ -813,14 +814,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def roundup(x):\n",
+    "  return int(math.ceil(x / 1000.0)) * 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fetch(i):\n",
     "    \n",
     "    df = pd.read_csv('2-fft-normal-n-0-6.csv')\n",
-    "    print(df.shape)\n",
     "    df = df.loc[df['router'] == i]\n",
     "    df = df.drop(columns=['router'])\n",
     "    df.to_csv('2-fft-normal-n-0-6-r'+str(i)+'.csv',index=False)\n",
@@ -828,15 +838,18 @@
     "\n",
     "    def timecount(df):\n",
     "        timearr = []\n",
-    "        interval = 99\n",
+    "        interval = 999\n",
     "        count = 0\n",
     "        for index, row in df.iterrows():\n",
-    "            if row[\"timestamp\"]<=interval:\n",
+    "            if row[\"timestamp\"]<=interval :\n",
     "                count+=1\n",
     "            else:\n",
     "                timearr.append([interval+1,count])\n",
     "                count=1\n",
-    "                interval+=100\n",
+    "                if (row[\"timestamp\"] == roundup(row[\"timestamp\"])):\n",
+    "                  interval = row[\"timestamp\"]+999\n",
+    "                else:\n",
+    "                  interval = roundup(row[\"timestamp\"])-1\n",
     "        timearr.append([interval+1,count])\n",
     "        return timearr\n",
     "    \n",
@@ -860,47 +873,33 @@
     "    def rename(df):\n",
     "        df['traversal_id'] = df['traversal_id']+1\n",
     "        df[\"packet_count_index\"] = df[\"packet_count_decr\"]*df[\"packet_count_incr\"]\n",
-    "        df[\"packet_max_index\"] = df[\"packet_count_index\"]*df[\"max_packet_count\"]\n",
     "        df[\"port_index\"] = df[\"outport\"]*df[\"inport\"]\n",
-    "        df[\"cache_coherence_flit_index\"] = df[\"cache_coherence_type\"]*df[\"flit_id\"]\n",
-    "        df[\"flit_index\"] = df[\"cache_coherence_flit_index\"]*df[\"flit_type\"]\n",
-    "        df[\"traversal_index\"] = df[\"flit_index\"]*df[\"traversal_id\"]\n",
+    "        df[\"traversal_index\"] = df[\"cache_coherence_type\"]*df[\"flit_id\"]*df[\"flit_type\"]*df[\"traversal_id\"]\n",
     "        df[\"cache_coherence_vnet_index\"] = df[\"cache_coherence_type\"]*df[\"vnet\"]\n",
-    "        df[\"vnet_vc_index\"] = df[\"vnet\"]*df[\"vc\"]\n",
-    "        df[\"vnet_vc_cc_index\"] = df[\"vnet\"]*df[\"cache_coherence_vnet_index\"]\n",
+    "        df[\"vnet_vc_cc_index\"] = df[\"vc\"]*df[\"cache_coherence_vnet_index\"]\n",
     "        \n",
     "    rename(df)\n",
     "    \n",
     "    df['target'] = 1\n",
+    "    \n",
+    "    print(df.shape)\n",
     "        \n",
     "    df.to_csv('2-fft-normal-n-0-6-r'+str(i)+'.csv',index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(645576, 18)\n",
-      "(645576, 18)\n",
-      "(645576, 18)\n",
-      "(645576, 18)\n",
-      "(645576, 18)\n",
-      "(645576, 18)\n",
-      "(645576, 18)\n",
-      "(645576, 18)\n",
-      "(645576, 18)\n",
-      "(645576, 18)\n",
-      "(645576, 18)\n",
-      "(645576, 18)\n",
-      "(645576, 18)\n",
-      "(645576, 18)\n",
-      "(645576, 18)\n",
-      "(645576, 18)\n"
+      "(84441, 26)\n",
+      "(45790, 26)\n",
+      "(31800, 26)\n",
+      "(19457, 26)\n"
      ]
     }
    ],
@@ -926,7 +925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
